argocd/manifests/komga/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: komga
  namespace: komga
  labels:
    app: komga
spec:
  type: ClusterIP
  selector:
    app: komga
  ports:
    - name: http
      port: 25600
      targetPort: 25600
      protocol: TCP
